--- a/src/app/note-components/components/code-card/code-card.component.scss
+++ b/src/app/note-components/components/code-card/code-card.component.scss
@@ -21,7 +21,7 @@
         }
     }
     pre {
-        padding: 5px 0;
+        padding: 5px;
         font-size: small;
     }
     #code-description {
